Fix display none on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -902,7 +902,7 @@ a {
   }
 
   .project-modal {
-    display: flex !important;
+    display: none;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
